Overflow/scroll fix for admin listings

--- a/woost/admin/ui/resources/styles/woost-admin-ui-listing.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-listing.scss
@@ -65,6 +65,7 @@
     font-size: 1.4em;
     display: flex;
     align-items: stretch;
+    overflow: hidden;
 
     & > * {
         flex: 1 1 auto;
